Clientes se capitalizo la informacion, caundo se realiza un mutate de la tabla reservas se reinician los reportes

--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,9 @@ body {
   background-color: #555;
   /* color al pasar el mouse */
 }
+
+input[type="date"] {
+  appearance: auto !important;
+  -webkit-appearance: auto !important;
+  /* Para navegadores basados en WebKit (Chrome, Safari) */
+}
